Update RootUtils.java